# protoc-gen-mavsdk-example

./: .gitignore  LICENSE  README.md  cheatsheet.md  example.md  example.md.j2  file.j2  generate_from_protos.bash  my_api.proto  requirements.txt  some_api.proto
.github/workflows/: main.yml
cpp/: CMakeLists.txt  ExampleLibraryConfig.cmake.in  README.md  module.modulemap  some_api.cpp  some_api.h  some_api.h.j2
cpp/cmake/: MacOSXFrameworkInfo.plist.in
cpp/src/: some_api.cpp  some_api.h  some_api.h.j2
cpp/test/: CMakeLists.txt  tests.cpp
cpp/tools/: assemble_xcframework.sh
misc/: README.md
py/: CMakeLists.txt  README.md  some_api_ext.cpp  some_api_ext.cpp.j2
py/dependencies/: CMakeLists.txt
py/dependencies/example_library/: CMakeLists.txt
py/dependencies/pybind11/: CMakeLists.txt
py/src/: some_api_ext.cpp  some_api_ext.cpp.j2
swift/: README.md
swift/ExampleLibrary/: Package.swift
swift/ExampleLibrary/Sources/ExampleLibrary/: SomeApi.swift  SomeApi.swift.j2
swift/ExampleLibrary/Sources/ExampleLibraryObjC/: SomeApiObjC.mm  SomeApiObjC.mm.j2  SomeApiWrapper.mm  type_conversions
swift/ExampleLibrary/Sources/ExampleLibraryObjC/include/: SomeApiObjC.h  SomeApiObjC.h.j2  SomeApiWrapper.h
swift/ExampleLibrary/Tests/ExampleLibraryTests/: ExampleLibraryTests.swift
swift/dependencies/: CMakeLists.txt
swift/dependencies/example_library/: CMakeLists.txt
